<resources>

    <string name="app_name">SYM - Labo 1</string>
    <string name="main_email_hint">Your e-mail address</string>
    <string name="main_password_hint">Your password</string>
    <string name="main_mandatory_field">Required field cannot be left blank</string>
    <string name="main_validate_btn">Validate</string>
    <string name="main_cancel_btn">Cancel</string>
    <string name="main_create_account">New account</string>
    <string name="main_icon_desc">Application\'s logo</string>
    <string name="toast_email_error">Email is invalid</string>
    <string name="dialog_invalid_credentials_title">Invalid credentials</string>
    <string name="dialog_invalid_credentials_error">The credentials you entered are invalid</string>
    <string name="new_account">Enter your new account</string>

</resources>
