<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="271dp"
        android:layout_height="325dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.395">

        <TextView
            android:id="@+id/new_email_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_email_hint" />

        <EditText
            android:id="@+id/new_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_email_title"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            tools:layout_below="@id/new_email_title" />

        <TextView
            android:id="@+id/new_password_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_email"
            android:text="@string/main_password_hint" />

        <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_password_title"
            android:ems="10"
            android:inputType="textPassword"
            tools:layout_below="@id/new_password_title" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_password"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            tools:layout_below="@id/new_password">

            <Button
                android:id="@+id/new_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/main_cancel_btn" />

            <Button
                android:id="@+id/new_validate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/main_validate_btn" />
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="40dp"
        android:text="@string/new_account"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>